--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://preetam5455.github.io/project-management-tool/",
   "name": "project-management-tool",
   "version": "0.1.0",
   "private": true,
